--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
     margin: 0 auto;
-    height: 119px;
+    min-height: 119px;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -19,9 +19,8 @@ header::after {
     opacity: .7;
 }
 
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 768px) {
     .header {
-        height: 84px;
-        /* margin: 0 0 0 27px; */
+        min-height: 84px;
     }
 }
