--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -8,7 +8,7 @@
     background: black;
     color: #fff;
     max-width: 1280px;
-    /* min-width: 300px; */
+    min-width: 320px;
     font-family: 'Inter', 'Arial', sans-serif;
     margin: 0 auto;
   }
