--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,3 +1,15 @@
 .profile {
-    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 40px auto 0;
+    max-width: 882px;
+}
+
+@media screen and (max-width:768px){
+    .profile{
+        flex-direction: column;
+        padding: 0 19px;
+        margin: 42px auto 0;
+    }
 }
