--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -1,4 +1,4 @@
-.profile__description {
+.profile__job {
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width:768px) {
-    .profile__description {
+    .profile__job {
         font-size: 14px;
         line-height: 17px;
         text-align: center;
