fix: add transition to buttons

--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -8,6 +8,7 @@
     background-image: url(../../../images/__add-button.svg);
     background-repeat: no-repeat;
     background-position: center;
+    transition: opacity .15s ease-in;
 }
 
 .profile__button-add:hover {
