--- a/blocks/profile/__name-container/profile__name-container.css
+++ b/blocks/profile/__name-container/profile__name-container.css
@@ -1,5 +1,5 @@
 .profile__name-container{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin: 0 17px 0 0;
 }
