--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -5,7 +5,7 @@
     border: 2px solid #FFF;
     box-sizing: border-box;
     border-radius: 2px;
-    background-image: url(../../../images/__add-button.svg);
+    background-image: url(../../../images/__button-add.svg);
     background-repeat: no-repeat;
     background-position: center;
     transition: opacity .15s ease-in;
