--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,15 +1,9 @@
-.popup__container{
+.popup__container {
     background: #FFFFFF;
     border-radius: 10px;
-    width: 430px;
-    height: 330px;
+    max-width: 430px;
+    width: 100%;
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /* padding: 34px 36px 36px; */
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* justify-content: center; */
-    /* align-items: center; */
+    box-sizing: border-box;
+    padding: 34px 36px 36px;
 }
