--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -3,7 +3,7 @@
     height: 50.15px;
     background: #000000;
     border-radius: 2px;
-    margin: 48px 36px 0;
+    margin: 46px 0 0;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
