--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,5 +6,6 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
-    transition: all .5s ease;
+    justify-content: center;
+    align-items: center;
 }
