fix: revue result

--- a/blocks/element/__photo/element__photo.css
+++ b/blocks/element/__photo/element__photo.css
@@ -1,8 +1,7 @@
 .element__photo {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+    object-fit: inherit;
     display: block;
-    position: absolute;
+    width: 282px;
+    height: 282px;
     border-radius: 10px 10px 0 0;
 }
