--- a/blocks/popup/__button-close/popup__button-close.css
+++ b/blocks/popup/__button-close/popup__button-close.css
@@ -1,10 +1,11 @@
-.popup__button-close{
+.popup__button-close {
     position: absolute;
-    top: -24px;
-    right: -24px;
-    min-width: 20px;
-    min-height: 20px;
+    top: -40px;
+    right: -40px;
+    min-width: 40px;
+    min-height: 40px;
     border: none;
+    outline: none;
     cursor: pointer;
     background-image: url(../../../images/__button-close.svg);
     background-position: center;
@@ -15,4 +16,13 @@
 
 .popup__button-close:hover {
     opacity: .6;
+}
+
+@media screen and (max-width:500px) {
+    .popup__button-close {
+        min-width: 26px;
+        min-height: 26px;
+        top: -26px;
+        right: -26px;
+    }
 }
