--- a/blocks/element/__button-like/element__button-like.css
+++ b/blocks/element/__button-like/element__button-like.css
@@ -1,3 +1,17 @@
-.element__button-like{
-    
+.element__button-like {
+    min-height: 24px;
+    min-width: 24px;
+    padding: 0;
+    background-image: url(../../../images/__button-like.svg);
+    border: none;
+    background-repeat: no-repeat;
+    background-color: transparent;
+    background-position: center;
+    transition: transform .15s ease-in;
+    outline: none;
+}
+
+.element__button-like:hover{
+    transform: scale(1.2);
+    cursor: pointer;
 }
