--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -2,9 +2,10 @@
     max-width: 882px;
     margin: 50px auto 0;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+    grid-template-columns: repeat(auto-fit, 282px);
     grid-row-gap: 21px;
     grid-column-gap: 18px;
+    justify-content: center;
 }
 
 @media screen and (max-width: 768px){
