--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,11 +1,11 @@
 .footer {
-    height: 144px;
     max-width: 882px;
     margin: 0 auto;
+    padding: 66px 0 60px;
 }
 
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 768px) {
     .footer {
-        height: 98px;
+        padding: 48px 19px 36px;
     }
 }
