--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -1,5 +1,6 @@
 .popup__submit {
-    min-width: 358px;
+    /* min-width: 358px; */
+    width: 100%;
     height: 50.15px;
     background: #000000;
     border-radius: 2px;
@@ -17,4 +18,10 @@
 
 .popup__submit:hover {
     opacity: .6;
+}
+
+@media screen and (max-width:500px){
+    .popup__submit{
+        margin: 26px 0 0;
+    }
 }
