--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,3 +6,10 @@
     color: #000000;
     margin: 0;
 }
+
+@media screen and (max-width:500px){
+    .popup__title{
+        font-size: 18px;
+        line-height: 22px;
+    }
+}
