--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -6,6 +6,10 @@
     position: fixed;
     box-sizing: border-box;
     padding: 34px 36px 36px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 @media screen and (max-width:500px) {
