--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,11 +1,11 @@
 .popup {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility .5s ease-in, opacity .5s ease-in;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
-    justify-content: center;
-    align-items: center;
 }
