--- a/pages/index.css
+++ b/pages/index.css
@@ -35,6 +35,8 @@
 
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/_form/popup_form_profile.css);
+@import url(../blocks/popup/_form/popup_form_mesto.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
@@ -42,3 +44,5 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__input/_field/popup__input_field_job.css);
 @import url(../blocks/popup/__input/_field/popup__input_field_name.css);
+@import url(../blocks/popup/__input/_field/popup__input_field_link.css);
+@import url(../blocks/popup/__input/_field/popup__input_field_cardName.css);
