--- a/pages/index.css
+++ b/pages/index.css
@@ -37,6 +37,7 @@
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/_form/popup_form_profile.css);
 @import url(../blocks/popup/_form/popup_form_mesto.css);
+@import url(../blocks/popup/_form/popup_form_photo.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
@@ -46,3 +47,6 @@
 @import url(../blocks/popup/__input/_field/popup__input_field_name.css);
 @import url(../blocks/popup/__input/_field/popup__input_field_link.css);
 @import url(../blocks/popup/__input/_field/popup__input_field_cardName.css);
+@import url(../blocks/popup/__caption/popup__caption.css);
+@import url(../blocks/popup/__image-container/popup__image-container.css);
+@import url(../blocks/popup/__image/popup__image.css);
