--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,5 +1,4 @@
-.popup__submit {
-    /* min-width: 358px; */
+.popup__button {
     width: 100%;
     height: 50.15px;
     background: #000000;
@@ -16,12 +15,12 @@
     transition: opacity .15s ease-in;
 }
 
-.popup__submit:hover {
+.popup__button:hover {
     opacity: .6;
 }
 
 @media screen and (max-width:500px){
-    .popup__submit{
+    .popup__button{
         margin: 26px 0 0;
     }
 }
