--- a/blocks/popup/__input/_type/popup__input_type_error.css
+++ b/blocks/popup/__input/_type/popup__input_type_error.css
@@ -1,9 +1,3 @@
 .popup__input_type_error {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 15px;
-    color: #FF0000;
-    opacity: 0;
-    transition: opacity .3s;
+    border-bottom-color: red;
 }
