--- a/pages/index.css
+++ b/pages/index.css
@@ -49,6 +49,7 @@
 @import url(../blocks/popup/__input/_field/popup__input_field_link.css);
 @import url(../blocks/popup/__input/_field/popup__input_field_cardName.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
 @import url(../blocks/popup/__error/popup__error_visible.css);
 @import url(../blocks/popup/__caption/popup__caption.css);
 @import url(../blocks/popup/__image-container/popup__image-container.css);
