--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -29,6 +29,8 @@
 @import url(../blocks/element/__info/element__info.css);
 @import url(../blocks/element/__photo/element__photo.css);
 @import url(../blocks/element/__button-trash/element__button-trash.css);
+@import url(../blocks/element/__like-container/element__like-container.css);
+@import url(../blocks/element/__likes/element__likes.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__text/footer__text.css);
