--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -29,6 +29,7 @@
 @import url(../blocks/element/__info/element__info.css);
 @import url(../blocks/element/__photo/element__photo.css);
 @import url(../blocks/element/__button-trash/element__button-trash.css);
+@import url(../blocks/element/__button-trash/_visible/button-trash_visible.css);
 @import url(../blocks/element/__like-container/element__like-container.css);
 @import url(../blocks/element/__likes/element__likes.css);
 
@@ -40,6 +41,7 @@
 @import url(../blocks/popup/_form/popup_form_profile.css);
 @import url(../blocks/popup/_form/popup_form_mesto.css);
 @import url(../blocks/popup/_form/popup_form_photo.css);
+@import url(../blocks/popup/_form/popup_form_confirm.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__button/popup__button.css);
