--- a/src/blocks/element/__button-trash/element__button-trash.css
+++ b/src/blocks/element/__button-trash/element__button-trash.css
@@ -1,21 +1,21 @@
 .element__button-trash {
-    display: none;
-    min-height: 24px;
-    min-width: 24px;
-    padding: 0;
-    background-image: url(../../../images/__button-trash.svg);
-    border: none;
-    background-repeat: no-repeat;
-    background-color: transparent;
-    background-position: center;
-    transition: opacity .15s ease-in;
-    outline: none;
-    position: absolute;
-    top: 18px;
-    right: 15px;
+  display: none;
+  min-height: 24px;
+  min-width: 24px;
+  padding: 0;
+  background-image: url(../../../images/__button-trash.svg);
+  border: none;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  background-position: center;
+  transition: opacity 0.15s ease-in;
+  outline: none;
+  position: absolute;
+  top: 18px;
+  right: 15px;
 }
 
 .element__button-trash:hover {
-    opacity: .6;
-    cursor: pointer;
+  opacity: 0.6;
+  cursor: pointer;
 }
